[package]
name = "gadget-down"
version = "0.1.0"
edition = "2021"
authors = ["Lily Chung <lkdc@mit.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
refinery = { git = "https://github.com/cryslith/refinery", branch = "expose-rev-partition" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
